Worked on camera. Need to add PointF overrides so it can be set on a properties tab. Need to implement camera interaction.
Reorganized and combined tabs.


git-svn-id: file:///mnt/svn/rtmath@42 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-win-ui/frmMain.resx
+++ b/rtmath/rtmath-win-ui/frmMain.resx
@@ -120,11 +120,14 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="treeNode14.ToolTipText" xml:space="preserve">
+    <value>Selection of the base atmospheric profiles. A user-defined profile may be created, or one of the USAF profiles may be selected. The layers in the profile do not necessarily correspond to the doubling-adding layers.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfbBQ4CESoX9ICn
+        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfbBQ4CESoX9ICn
         AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAABo5JREFUeF7tXTuoHVUUjXlqJOLT
         QsFfRBFE1ED8NEKEaAqx0EILEUQUDRYSSKUIETQ2Coo2ImIj2FhELW0SlBQKQQvTWCgYDYp/0CTGT+Jz
         7XCf3Pd8uTNz5qzz9j5nPdjVm7PP2mutmX1mztx716zRnxgQA2JADIgBMSAGxIAYEANiQAyIATEgBlZg
